--- a/coolstore/src/main/webapp/partials/header.html
+++ b/coolstore/src/main/webapp/partials/header.html
@@ -40,7 +40,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-primary">
         <li ng-class="{ active: isActive('/')}">
-          <a ng-href="#/" class="active">Red Hat Cool Store</a>
+          <a ng-href="#/" class="active">EAP7 Cool Store</a>
         </li>
           <li ng-class="{ active: isActive('/cart')}">
           <a ng-href="#/cart">Your Shopping Cart</a>
